--- a/week4/coqauvin/index.html
+++ b/week4/coqauvin/index.html
@@ -80,7 +80,7 @@
 		</div>
 		</section>
 		
-	   <div id="aside">
+	   <div class="aside">
 		   <p>Cook’s Note: If the sauce is not thick enough at the end of reducing, you may add a mixture of equal parts butter and flour kneaded together. Start with 1 tablespoon of each. Whisk this into the sauce for 4 to 5 minutes and repeat, if necessary.</p>
 		</div>
 	</article>
