--- a/final/index.html
+++ b/final/index.html
@@ -10,6 +10,9 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/application.css" rel="stylesheet">
 	<link href="css/normalize.css" rel="stylesheet">
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -19,46 +22,47 @@
     <![endif]-->
   </head>
   <body>
-	  <div class="leadimage">
-		  <img src="images/leadimage.jpg">
+	  <div class="container" id="leadimage">
+<img src="images/leadimage.jpg">
 	  </div>
 	  
-	  <div class="header">
+	<!--   <div class="header">
     	  <h1>Bonner Di Salvo</h1>
-	</div>
-	<div class="navigation">
+	</div> -->
+	<div class="container" id="navigation">
 				<!-- Nav:Begin -->
 				<div style="display:block;" >
 	<ul id="Nav1" class="nav">
+	<li><img src="images/logo.jpg"></li>
 	<li><a href="Home.html"  target="_self" onclick="">Home</a></li>
 	<li><a href="About_Us.html"  target="_self" onclick="">About Us</a></li>
 	<li><a href="Areas_of_Law.html"  target="_self" onclick="">Areas of Law</a></li>
 	<li><a href="Attorneys.html"  target="_self" onclick="">Attorneys</a></li>
 	<li><a href="Contact_Us.html"  target="_self" onclick="">Contact Us</a></li>
+	<li><small><i class="fa fa-phone"></i></small> (313) 596-9500</li>
 	</ul>
 	</div>
-		  <div class="home">
+	</div>
+	
+		  <div class="container" id="home">
 			  <div class="row">
-	        <div class="col-md-6"><img class="aboutimage" src="images/trumpet.jpg"></div>
-	        <div class="col-md-6"><p>No matter how much one may hope otherwise, sometimes life can take an unexpected turn that requires you to need the services of an attorney. </p>
+	        <div class="col-md-7"><img class="aboutimage" src="images/office.jpg"></div>
+	        <div class="col-md-5" id="text"><p>No matter how much one may hope otherwise, sometimes life can take an unexpected turn that requires you to need the services of an attorney.</p>
 
 	<p>Bonner Di Salvo, PLLC is a boutique law firm offering personal attention to its clients in a professional and individualized manner. Our attorneys specialize in: Bankruptcy, Veterans Advocacy, Civil Litigation, Insurance Claims, International Business, Estates and Trusts, and Criminal Defense.</p> 
 
 	<p>In addition to assisting clients in Michigan, we represent clients throughout the United States and internationally.</p>
-	<p>Why Choose Us?</p>
-	<ul><li>Flat rate fees available</li>
-	<li>No hidden costs</li>
-	<li>Free case evaluation</li>
-	<li>Free initial consultation</li>
-	<li>Payment plans available</li>
-	<li>Evening and weekend hours by appointment</li>
-	<li>Within walking distance of: 36th District Court, 3rd Circuit Court, Federal District Court, Bankruptcy Court, and Department of Veterans Affairs.</li>
+
+<h2>Call today for a <b><i>free</i></b> consultation.</h2>
 </div>
 		  </div>
-		  </div>
+  </div>
 	
-	<div class="about">
-	<p>Initiating legal proceedings can be a difficult decision, and you need an attorney with the experience and competence to guide you through the process. Bonner Di Salvo, PLLC was formed with one philosophy in mind: treat our clients with respect and honesty, as we create a case management plan tailored to each client’s individual needs.</p>
+	<div class="container" id="about">
+	  <div class="row">
+		<h1>About Us</h1>
+	        <div class="col-md-6">
+<p>Initiating legal proceedings can be a difficult decision, and you need an attorney with the experience and competence to guide you through the process. Bonner Di Salvo, PLLC was formed with one philosophy in mind: treat our clients with respect and honesty, as we create a case management plan tailored to each client’s individual needs.</p>
 
 	<p>We are proud to be entrusted with the needs of our clients as the attorneys of Bonner Di Salvo, PLLC represent them in their cases, including in these areas of law:</p>
 	<ul><li>Bankruptcy</li>
@@ -68,36 +72,49 @@
 	<li>International Business</li>
 	<li>Estates and Trusts</li>
 	<li>Criminal Defense</li></ul>
-	<p>Our attorneys are admitted to practice in the following jurisdictions: Michigan, United States District Court for the Eastern District of Michigan, United States District Court for the Western District of Michigan, United States Court of Appeals for the Sixth Circuit, United States Court of Appeals for Veterans Claims, and United States Court of Appeals for the Federal Circuit.</p>
+
+</div>
+	        <div class="col-md-6">
+		 	<p>Our attorneys are admitted to practice in the following jurisdictions: Michigan, United States District Court for the Eastern District of Michigan, United States District Court for the Western District of Michigan, United States Court of Appeals for the Sixth Circuit, United States Court of Appeals for Veterans Claims, and United States Court of Appeals for the Federal Circuit.</p>
+	<h2>Why Choose Us?</h2>
+	<ul><li>Flat rate fees available</li>
+	<li>No hidden costs</li>
+	<li>Free case evaluation</li>
+	<li>Free initial consultation</li>
+	<li>Payment plans available</li>
+	<li>Evening and weekend hours by appointment</li>
+	<li>Within walking distance of: 36th District Court, 3rd Circuit Court, Federal District Court, Bankruptcy Court, and Department of Veterans Affairs.</li></ul>
+</div>
+</div>
 </div>
 	
 	
 	
-  <div class="law">
+  <div class="container" id="law">
+	  <h1>Areas of Law</h1>
 	  <div class="row">
-        <div class="col-md-4"><img src="images/bankruptcy.png"></div>
-        <div class="col-md-4"><img src="images/veterans.png"></div>
-        <div class="col-md-4"><img src="images/insurance.png"></div>
-        <div class="col-md-3"><img src="images/civil.png"></div>
-        <div class="col-md-3"><img src="images/international.png"></div>
-        <div class="col-md-3"><img src="images/estate.png"></div>
-        <div class="col-md-3"><img src="images/criminal.png"></div>
+        <div class="col-md-4"><figure><img src="images/bankruptcy.jpg"><a href ="Areas_of_Law.html"><figcaption><h3>Crime Title</h3>"description."</figcaption></a></figure></div>
+        <div class="col-md-4"><figure><img src="images/veterans.jpg"><a href ="Areas_of_Law.html"><figcaption><h3>Crime Title</h3>"description."</figcaption></a></figure></div>
+        <div class="col-md-4"><figure><img src="images/insurance.jpg"><a href ="Areas_of_Law.html"><figcaption><h3>Crime Title</h3>"description."</figcaption></a></figure></div>
+        <div class="col-md-4"><figure><img src="images/civil.jpg"><a href ="Areas_of_Law.html"><figcaption><h3>Crime Title</h3>"description."</figcaption></a></figure></div>
+        <div class="col-md-4"><figure><img src="images/estate.jpg"><a href ="Areas_of_Law.html"><figcaption><h3>Crime Title</h3>"description."</figcaption></a></figure></div>
+        <div class="col-md-4"><figure><img src="images/criminal.jpg"><a href ="Areas_of_Law.html"><figcaption><h3>Crime Title</h3>"description."</figcaption></a></figure></div>
 	  </div>
   </div>
 	
-  <div class="attorneys">
+  <div class="container" id="attorneys">
+	  <h1>Attorneys</h1>
 	  <div class="row">
         <div class="col-md-4"><figure id="circle"><img src="images/bonner.jpg"></figure><h2>Deanne L. Bonner Simpson</h2><p>Member/Attorney</p></div>
-        <div class="col-md-4"><img src="images/disalvo.jpg"><h2>Lorenzo Di Salvo</h2><p>Member/Attorney</p></div></div>
-        <div class="col-md-4"><img src="images/ruark.jpg"><h2>Amy E. Ruark</h2><p>Attorney</p></div>
-        <div class="col-md-4"><img src="images/nizio.jpg"><h2>Frank Nizio</h2><p>Of Counsel</p></div>
-        <div class="col-md-4"><img src="images/rcarolan.jpg"><h2>Richard J. Carolan</h2><p>Co-counsel</p></div>
-        <div class="col-md-4"><img src="images/pcarolan.jpg"><h2>Penny Carolan</h2><p>Co-counsel</p></div>
+        <div class="col-md-4"><figure id="circle"><img src="images/disalvo.jpg"></figure><h2>Lorenzo Di Salvo</h2><p>Member/Attorney</p></div>
+        <div class="col-md-4"><figure id="circle"><img src="images/ruark.jpg"></figure><h2>Amy E. Ruark</h2><p>Attorney</p></div>
+        <div class="col-md-4"><figure id="circle"><img src="images/nizio.jpg"></figure><h2>Frank Nizio</h2><p>Of Counsel</p></div>
+        <div class="col-md-4"><figure id="circle"><img src="images/rcarolan.jpg"></figure><h2>Richard J. Carolan</h2><p>Co-counsel</p></div>
+        <div class="col-md-4"><figure id="circle"><img src="images/pcarolan.jpg"></figure><h2>Penny Carolan</h2><p>Co-counsel</p></div>
 	  </div>
   </div>	
-	  
-<div class="row">
-	<div class="col-md-12" id="footer"><p>Bonner Di Salvo, PLLC<br>
+<div class="container" id="footer">
+	<div class="row"><p>Bonner Di Salvo, PLLC<br>
 615 Griswold Street, Suite 1700<br>
 Detroit, MI  48226<br>
 (313) 596-9500<br>
@@ -105,10 +122,10 @@ info@bonnerdisalvo.com</p>
 
 <p>Content copyright © 2014. Bonner Di Salvo, PLLC. All rights reserved.</p></div>
 </div>
+   </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-  </body>
+    <script src="js/bootstrap.min.js"></script>  </body>
 </html>
