--- a/final/index.html
+++ b/final/index.html
@@ -13,7 +13,7 @@
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
-
+	<script src="js/nav.js"></script>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -29,22 +29,23 @@
 	<!--   <div class="header">
     	  <h1>Bonner Di Salvo</h1>
 	</div> -->
+		
 	<div class="container" id="navigation">
 				<!-- Nav:Begin -->
 				<div style="display:block;" >
 	<ul id="Nav1" class="nav">
 	<li><img src="images/logo.jpg"></li>
-	<li><a href="Home.html"  target="_self" onclick="">Home</a></li>
-	<li><a href="About_Us.html"  target="_self" onclick="">About Us</a></li>
-	<li><a href="Areas_of_Law.html"  target="_self" onclick="">Areas of Law</a></li>
-	<li><a href="Attorneys.html"  target="_self" onclick="">Attorneys</a></li>
-	<li><a href="Contact_Us.html"  target="_self" onclick="">Contact Us</a></li>
+	<li><a href="#"  class="scroll-link" data-id="home">Home</a></li>
+	<li><a href="#"  class="scroll-link" data-id="about">About Us</a></li>
+	<li><a href="#"  class="scroll-link" data-id="law">Areas of Law</a></li>
+	<li><a href="#"  class="scroll-link" data-id="attorneys">Attorneys</a></li>
+	<li><a href="#"  class="scroll-link" data-id="contact">Contact Us</a></li>
 	<li><small><i class="fa fa-phone"></i></small> (313) 596-9500</li>
 	</ul>
 	</div>
 	</div>
 	
-		  <div class="container" id="home">
+		  <div class="container page-section" id="home">
 			  <div class="row">
 	        <div class="col-md-7"><img class="aboutimage" src="images/office.jpg"></div>
 	        <div class="col-md-5" id="text"><p>No matter how much one may hope otherwise, sometimes life can take an unexpected turn that requires you to need the services of an attorney.</p>
@@ -58,7 +59,7 @@
 		  </div>
   </div>
 	
-	<div class="container" id="about">
+	<div class="container page-section" id="about">
 	  <div class="row">
 		<h1>About Us</h1>
 	        <div class="col-md-6">
@@ -90,19 +91,23 @@
 	
 	
 	
-  <div class="container" id="law">
+  <div class="container page-section" id="law">
 	  <h1>Areas of Law</h1>
 	  <div class="row">
-        <div class="col-md-4"><figure><img src="images/bankruptcy.jpg"><a href ="Areas_of_Law.html"><figcaption><h3>Crime Title</h3>"description."</figcaption></a></figure></div>
-        <div class="col-md-4"><figure><img src="images/veterans.jpg"><a href ="Areas_of_Law.html"><figcaption><h3>Crime Title</h3>"description."</figcaption></a></figure></div>
-        <div class="col-md-4"><figure><img src="images/insurance.jpg"><a href ="Areas_of_Law.html"><figcaption><h3>Crime Title</h3>"description."</figcaption></a></figure></div>
-        <div class="col-md-4"><figure><img src="images/civil.jpg"><a href ="Areas_of_Law.html"><figcaption><h3>Crime Title</h3>"description."</figcaption></a></figure></div>
-        <div class="col-md-4"><figure><img src="images/estate.jpg"><a href ="Areas_of_Law.html"><figcaption><h3>Crime Title</h3>"description."</figcaption></a></figure></div>
-        <div class="col-md-4"><figure><img src="images/criminal.jpg"><a href ="Areas_of_Law.html"><figcaption><h3>Crime Title</h3>"description."</figcaption></a></figure></div>
+        <div class="col-md-4"><figure><img src="images/bankruptcy.jpg"><a href ="Areas_of_Law.html"><figcaption><h3>Bankruptcy</h3></figcaption></a></figure></div>
+        <div class="col-md-4"><figure><img src="images/veterans.jpg"><a href ="Areas_of_Law.html"><figcaption><h3>Veterans Advocacy</h3></figcaption></a></figure></div>
+        <div class="col-md-4"><figure><img src="images/insurance.jpg"><a href ="Areas_of_Law.html"><figcaption><h3>Insurance Claims</h3></figcaption></a></figure></div>
+        <div class="col-md-4"><figure><img src="images/civil.jpg"><a href ="Areas_of_Law.html"><figcaption><h3>Civil Litigation</h3>
+</figcaption></a></figure></div>
+        <div class="col-md-4"><figure><img src="images/estate.jpg"><a href ="Areas_of_Law.html"><figcaption><h3>Estate Planning</h3> </figcaption></a></figure></div>
+        <div class="col-md-4"><figure><img src="images/criminal.jpg"><a href ="Areas_of_Law.html"><figcaption><h3>Criminal Law</h3>
+</figcaption></a></figure></div>
+
 	  </div>
   </div>
 	
-  <div class="container" id="attorneys">
+	
+  <div class="container page-section" id="attorneys">
 	  <h1>Attorneys</h1>
 	  <div class="row">
         <div class="col-md-4"><figure id="circle"><img src="images/bonner.jpg"></figure><h2>Deanne L. Bonner Simpson</h2><p>Member/Attorney</p></div>
@@ -113,12 +118,61 @@
         <div class="col-md-4"><figure id="circle"><img src="images/pcarolan.jpg"></figure><h2>Penny Carolan</h2><p>Co-counsel</p></div>
 	  </div>
   </div>	
+  
+ <div class="container page-section" id="contact">
+	 <div class="row">  
+		 <h1>Contact Us</h1>
+		 <div class="col-md-6"><p>Please call Bonner Di Salvo, PLLC for a free consultation.</p>
+
+<h3>Main Line:</h3>  <p>(313) 596-9500</p>
+
+<h3>Veterans' Hotline:</h3> <p>(888) 4VET-LAW</p>
+
+<h3>Email us at:</h3> <p><a href="mailto:info@bonnerdisalvo.com" target="_top">info@bonnerdisalvo.com</a></p>
+
+<p>Or, submit your question here, on our secure and confidential web-portal.</p>
+
+<h3>Disclaimer:</h3> <p>Transmission or receipt of information does not constitute an attorney-client relationship.</p> </div>
+		 <div class="col-md-6">            <form labelid="formLabel_ContactForm" method="post" action="https://sitesupport.websitetonight.com/formmailer.aspx?projectid=2238408&websiteid=21236312&emailid=" name="Contact Form" id="wstForm_Contact">
+                <table cellspacing="0" cellpadding="0" style="width: 100%;">
+                    <tbody>
+                        <tr>
+                            <td style="padding-bottom: 10px; padding-right: 10px;">
+                            <span controlid="formElement_Name" id="formLabel_Name"><h3>Sender's Name</h3></span> <br />
+                            <input type="text" labelid="formLabel_Name" name="Name" style="padding: 2px; width: 100%; border: 1px solid #3c4d55; background-color: #FFF;" id="formElement_Name" />
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="padding-bottom: 10px; padding-right: 10px;">
+                            <span controlid="formElement_Email" id="formLabel_Email"><h3>Sender's Email</h3></span> <br />
+                            <input type="text" labelid="formLabel_Email" name="Email" style="padding: 2px; width: 100%; border: 1px solid #3c4d55; background-color: #FFF;" id="formElement_Email" />
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="padding-bottom: 10px; padding-right: 10px;">
+                            <span controlid="formElement_Comments" id="formLabel_Comments"><h3>Comments</h3></span> <br />
+                            <textarea labelid="formLabel_Comments" name="Comments" style="overflow: auto; height: 40px; padding: 2px; width: 100%; border: 1px solid #3c4d55; background-color: #FFF;" id="formElement_Comments" type="text"></textarea>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                            <input type="hidden" value="Contact Form." name="FormMailerSubject" id="FormMailerSubject" /><input type="hidden" value="http://bonnerdisalvo.com/Home.html" name="FormMailerRedirect" id="FormMailerRedirect" /><input type="hidden" id="FormMailerUrl" name="FormMailerUrl" value="https://sitesupport.websitetonight.com/formmailer.aspx?projectid=2238408&websiteid=21236312&emailid=" /> </td>
+                        </tr>
+                        <tr>
+                            <td><input type="submit" onclick="return wstxSubmitForm(this);" value="Submit" style="padding: 2px; border: 0px; background-color: #840137;" id="wstForm_Contact_Submit" /></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </form></div>
+	</div>
+  </div>
+  
 <div class="container" id="footer">
-	<div class="row"><p>Bonner Di Salvo, PLLC<br>
+	<div class="row"><div id="address">Bonner Di Salvo, PLLC<br>
 615 Griswold Street, Suite 1700<br>
-Detroit, MI  48226<br>
-(313) 596-9500<br>
-info@bonnerdisalvo.com</p>
+Detroit, MI  48226</div>
+<div id="contact-info">(313) 596-9500<br>
+<a href="mailto:info@bonnerdisalvo.com" target="_top">info@bonnerdisalvo.com</a></div>
 
 <p>Content copyright © 2014. Bonner Di Salvo, PLLC. All rights reserved.</p></div>
 </div>
@@ -126,6 +180,42 @@ info@bonnerdisalvo.com</p>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>  </body>
+	<script src="js/bootstrap.min.js" type="text/javascript"></script>
+	<script type="text/javascript">
+	$(document).ready(function() {
+		// navigation click actions	
+		$('.scroll-link').on('click', function(event){
+			event.preventDefault();
+			var sectionID = $(this).attr("data-id");
+			scrollToID('#' + sectionID, 750);
+		});
+		// scroll to top action
+		$('.scroll-top').on('click', function(event) {
+			event.preventDefault();
+			$('html, body').animate({scrollTop:0}, 'slow'); 		
+		});
+		// mobile nav toggle
+		$('#nav-toggle').on('click', function (event) {
+			event.preventDefault();
+			$('#main-nav').toggleClass("open");
+		});
+	});
+	// scroll function
+	function scrollToID(id, speed){
+		var offSet = 50;
+		var targetOffset = $(id).offset().top - offSet;
+		var mainNav = $('#main-nav');
+		$('html,body').animate({scrollTop:targetOffset}, speed);
+		if (mainNav.hasClass("open")) {
+			mainNav.css("height", "1px").removeClass("in").addClass("collapse");
+			mainNav.removeClass("open");
+		}
+	}
+	if (typeof console === "undefined") {
+	    console = {
+	        log: function() { }
+	    };
+	}
+	</script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->  </body>
 </html>
