--- a/final/index.html
+++ b/final/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
 	  <div class="container" id="leadimage">
-<img src="images/leadimage.jpg">
+<img src="images/leadimage.jpg" alt="Man standing in courtroom">
 	  </div>
 	  
 	<!--   <div class="header">
@@ -34,7 +34,7 @@
 				<!-- Nav:Begin -->
 				<div style="display:block;" >
 	<ul id="Nav1" class="nav">
-	<li><img src="images/logo.jpg"></li>
+	<li><img src="images/logo.jpg" alt="Bonner Di Salvo logo"></li>
 	<li><a href="#"  class="scroll-link" data-id="home">Home</a></li>
 	<li><a href="#"  class="scroll-link" data-id="about">About Us</a></li>
 	<li><a href="#"  class="scroll-link" data-id="law">Areas of Law</a></li>
@@ -47,7 +47,7 @@
 	
 		  <div class="container page-section" id="home">
 			  <div class="row">
-	        <div class="col-md-7"><img class="aboutimage" src="images/office.jpg"></div>
+	        <div class="col-md-7"><img class="aboutimage" src="images/office.jpg" alt="The offices of Bonner Di Salvo"></div>
 	        <div class="col-md-5" id="text"><p>No matter how much one may hope otherwise, sometimes life can take an unexpected turn that requires you to need the services of an attorney.</p>
 
 	<p>Bonner Di Salvo, PLLC is a boutique law firm offering personal attention to its clients in a professional and individualized manner. Our attorneys specialize in: Bankruptcy, Veterans Advocacy, Civil Litigation, Insurance Claims, International Business, Estates and Trusts, and Criminal Defense.</p> 
@@ -94,14 +94,14 @@
   <div class="container page-section" id="law">
 	  <h1>Areas of Law</h1>
 	  <div class="row">
-        <div class="col-md-4"><figure><img src="images/bankruptcy.jpg"><a href ="Areas_of_Law.html"><figcaption><h3>Bankruptcy</h3></figcaption></a></figure></div>
-        <div class="col-md-4"><figure><img src="images/veterans.jpg"><a href ="Areas_of_Law.html"><figcaption><h3>Veterans Advocacy</h3></figcaption></a></figure></div>
-        <div class="col-md-4"><figure><img src="images/insurance.jpg"><a href ="Areas_of_Law.html"><figcaption><h3>Insurance Claims</h3></figcaption></a></figure></div>
-        <div class="col-md-4"><figure><img src="images/civil.jpg"><a href ="Areas_of_Law.html"><figcaption><h3>Civil Litigation</h3>
-</figcaption></a></figure></div>
-        <div class="col-md-4"><figure><img src="images/estate.jpg"><a href ="Areas_of_Law.html"><figcaption><h3>Estate Planning</h3> </figcaption></a></figure></div>
-        <div class="col-md-4"><figure><img src="images/criminal.jpg"><a href ="Areas_of_Law.html"><figcaption><h3>Criminal Law</h3>
-</figcaption></a></figure></div>
+        <div class="col-md-4"><figure><img src="images/bankruptcy.jpg" alt="Bankruptcy law"><a href ="Areas_of_Law.html"><div class="fc"><h3>Bankruptcy</h3></div></a></figure></div>
+        <div class="col-md-4"><figure><img src="images/veterans.jpg" alt="Veterans Law"><a href ="Areas_of_Law.html"><div class="fc"><h3>Veterans Advocacy</h3></div></a></figure></div>
+        <div class="col-md-4"><figure><img src="images/insurance.jpg" alt="Insurance Claims"><a href ="Areas_of_Law.html"><div class="fc"><h3>Insurance Claims</h3></div></a></figure></div>
+        <div class="col-md-4"><figure><img src="images/civil.jpg" alt="Civil litigation"><a href ="Areas_of_Law.html"><div class="fc"><h3>Civil Litigation</h3>
+</div></a></figure></div>
+        <div class="col-md-4"><figure><img src="images/estate.jpg" alt="Estate planning"><a href ="Areas_of_Law.html"><div class="fc"><h3>Estate Planning</h3> </div></a></figure></div>
+        <div class="col-md-4"><figure><img src="images/criminal.jpg" alt="Criminal law"><a href ="Areas_of_Law.html"><div class="fc"><h3>Criminal Law</h3>
+</div></a></figure></div>
 
 	  </div>
   </div>
@@ -110,12 +110,12 @@
   <div class="container page-section" id="attorneys">
 	  <h1>Attorneys</h1>
 	  <div class="row">
-        <div class="col-md-4"><figure id="circle"><img src="images/bonner.jpg"></figure><h2>Deanne L. Bonner Simpson</h2><p>Member/Attorney</p></div>
-        <div class="col-md-4"><figure id="circle"><img src="images/disalvo.jpg"></figure><h2>Lorenzo Di Salvo</h2><p>Member/Attorney</p></div>
-        <div class="col-md-4"><figure id="circle"><img src="images/ruark.jpg"></figure><h2>Amy E. Ruark</h2><p>Attorney</p></div>
-        <div class="col-md-4"><figure id="circle"><img src="images/nizio.jpg"></figure><h2>Frank Nizio</h2><p>Of Counsel</p></div>
-        <div class="col-md-4"><figure id="circle"><img src="images/rcarolan.jpg"></figure><h2>Richard J. Carolan</h2><p>Co-counsel</p></div>
-        <div class="col-md-4"><figure id="circle"><img src="images/pcarolan.jpg"></figure><h2>Penny Carolan</h2><p>Co-counsel</p></div>
+        <div class="col-md-4 circle"><figure><img src="images/bonner.jpg" alt="Deanne Bonner headshot"></figure><h2>Deanne L. Bonner Simpson</h2><p>Member/Attorney</p></div>
+        <div class="col-md-4 circle"><figure><img src="images/disalvo.jpg"  alt="Lorenzo Di Salvo headshot"></figure><h2>Lorenzo Di Salvo</h2><p>Member/Attorney</p></div>
+        <div class="col-md-4 circle"><figure><img src="images/ruark.jpg" alt="Amy Ruark headshot"></figure><h2>Amy E. Ruark</h2><p>Attorney</p></div>
+        <div class="col-md-4 circle"><figure><img src="images/nizio.jpg" alt="Frank Nizzio headshot"></figure><h2>Frank Nizio</h2><p>Of Counsel</p></div>
+        <div class="col-md-4 circle"><figure><img src="images/rcarolan.jpg" alt="Richard Carolan headshot"></figure><h2>Richard J. Carolan</h2><p>Co-counsel</p></div>
+        <div class="col-md-4 circle"><figure><img src="images/pcarolan.jpg" alt="Penny Carolan"></figure><h2>Penny Carolan</h2><p>Co-counsel</p></div>
 	  </div>
   </div>	
   
@@ -133,37 +133,16 @@
 <p>Or, submit your question here, on our secure and confidential web-portal.</p>
 
 <h3>Disclaimer:</h3> <p>Transmission or receipt of information does not constitute an attorney-client relationship.</p> </div>
-		 <div class="col-md-6">            <form labelid="formLabel_ContactForm" method="post" action="https://sitesupport.websitetonight.com/formmailer.aspx?projectid=2238408&websiteid=21236312&emailid=" name="Contact Form" id="wstForm_Contact">
-                <table cellspacing="0" cellpadding="0" style="width: 100%;">
-                    <tbody>
-                        <tr>
-                            <td style="padding-bottom: 10px; padding-right: 10px;">
-                            <span controlid="formElement_Name" id="formLabel_Name"><h3>Sender's Name</h3></span> <br />
-                            <input type="text" labelid="formLabel_Name" name="Name" style="padding: 2px; width: 100%; border: 1px solid #3c4d55; background-color: #FFF;" id="formElement_Name" />
-                            </td>
-                        </tr>
-                        <tr>
-                            <td style="padding-bottom: 10px; padding-right: 10px;">
-                            <span controlid="formElement_Email" id="formLabel_Email"><h3>Sender's Email</h3></span> <br />
-                            <input type="text" labelid="formLabel_Email" name="Email" style="padding: 2px; width: 100%; border: 1px solid #3c4d55; background-color: #FFF;" id="formElement_Email" />
-                            </td>
-                        </tr>
-                        <tr>
-                            <td style="padding-bottom: 10px; padding-right: 10px;">
-                            <span controlid="formElement_Comments" id="formLabel_Comments"><h3>Comments</h3></span> <br />
-                            <textarea labelid="formLabel_Comments" name="Comments" style="overflow: auto; height: 40px; padding: 2px; width: 100%; border: 1px solid #3c4d55; background-color: #FFF;" id="formElement_Comments" type="text"></textarea>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                            <input type="hidden" value="Contact Form." name="FormMailerSubject" id="FormMailerSubject" /><input type="hidden" value="http://bonnerdisalvo.com/Home.html" name="FormMailerRedirect" id="FormMailerRedirect" /><input type="hidden" id="FormMailerUrl" name="FormMailerUrl" value="https://sitesupport.websitetonight.com/formmailer.aspx?projectid=2238408&websiteid=21236312&emailid=" /> </td>
-                        </tr>
-                        <tr>
-                            <td><input type="submit" onclick="return wstxSubmitForm(this);" value="Submit" style="padding: 2px; border: 0px; background-color: #840137;" id="wstForm_Contact_Submit" /></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </form></div>
+		 <div class="col-md-6">            <form action="contact.php" method="post">
+    Your name<br>
+    <input type="text" name="cf_name"><br>
+    Your e-mail<br>
+    <input type="text" name="cf_email"><br>
+    Message<br>
+    <input type="text" name="cf_message"><br>
+<input type="submit" value="Send">
+<input type="reset" value="Clear">
+</form></div>
 	</div>
   </div>
   
@@ -176,7 +155,6 @@ Detroit, MI  48226</div>
 
 <p>Content copyright © 2014. Bonner Di Salvo, PLLC. All rights reserved.</p></div>
 </div>
-   </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
